<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Line     : bullbee117
 * Phone    : 081357108568
 * Majors   : D3 Teknik Informatika 2016
 * Campus   : Telkom University
 * 
 * id.amirisback.frogobox
 * 
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_menu_pemberitahuan"
        android:icon="@drawable/ic_toolbar_notifications"
        android:title="@string/text_notifikasi"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/toolbar_menu_profil"
        android:title="@string/title_profil" />

    <item
        android:id="@+id/toolbar_menu_jadwal_kegiatan"
        android:title="@string/title_jadwal_kegiatan" />

    <item
        android:id="@+id/toolbar_menu_kuota_dosen"
        android:title="@string/title_kuota_dosen" />

    <item
        android:id="@+id/toolbar_menu_arsip_judul"
        android:title="@string/title_arsip_judul" />

    <item
        android:id="@+id/toolbar_menu_tentang_kami"
        android:title="@string/menu_tentang_kami" />

    <item
        android:id="@+id/toolbar_menu_keluar"
        android:title="@string/title_keluar"/>

</menu>