<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            style="@style/profile_all_header"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/act_koor_profil_foto_dosen"
            style="@style/profile_all_photo"/>

        <TextView
            android:id="@+id/act_koor_dosen_nama"
            android:text="@string/dummy_dosen_pembimbing"
            android:layout_below="@+id/act_koor_profil_foto_dosen"
            style="@style/profile_all_header_name"/>

        <LinearLayout
            style="@style/profile_all_container_body">

            <LinearLayout
                style="@style/profile_all_container_textview">

                <TextView
                    android:text="@string/text_profil_detail_nip"
                    style="@style/profile_all_textview_subtitle"/>

                <TextView
                    android:id="@+id/act_koor_dosen_nip"
                    tools:text="@string/dummy_mahasiswa_nim"
                    style="@style/profile_all_textview_content"/>

            </LinearLayout>

            <View
                android:layout_marginBottom="@dimen/dimen_big_super_24dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_line"
                android:background="@color/colorBackground"/>

            <LinearLayout
                style="@style/profile_all_container_textview">

                <TextView
                    android:text="@string/text_kode_dosen"
                    style="@style/profile_all_textview_subtitle"/>

                <TextView
                    android:id="@+id/act_koor_dosen_kode"
                    android:text="@string/dummy_dosen_kode"
                    style="@style/profile_all_textview_content"/>

            </LinearLayout>

            <View
                android:layout_marginBottom="@dimen/dimen_big_super_24dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_line"
                android:background="@color/colorBackground"/>

            <LinearLayout
                style="@style/profile_all_container_textview">

                <TextView
                    android:text="@string/title_batas_bimbingan"
                    style="@style/profile_all_textview_subtitle"/>

                <TextView
                    android:id="@+id/act_koor_dosen_batas_bimbingan"
                    android:text="@string/dummy_dosen_kode"
                    style="@style/profile_all_textview_content"/>

            </LinearLayout>

            <View
                android:layout_marginBottom="@dimen/dimen_big_super_24dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_line"
                android:background="@color/colorBackground"/>


            <LinearLayout
                style="@style/profile_all_container_textview">

                <TextView
                    android:text="@string/title_batas_reviewer"
                    style="@style/profile_all_textview_subtitle"/>

                <TextView
                    android:id="@+id/act_koor_dosen_batas_reviewer"
                    android:text="@string/dummy_dosen_kode"
                    style="@style/profile_all_textview_content"/>

            </LinearLayout>

            <View
                android:layout_marginBottom="@dimen/dimen_big_super_24dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_line"
                android:background="@color/colorBackground"/>


            <LinearLayout
                style="@style/profile_all_container_textview">

                <TextView
                    android:text="@string/text_profil_detail_email"
                    style="@style/profile_all_textview_subtitle"/>

                <TextView
                    android:id="@+id/act_koor_dosen_email"
                    android:text="@string/dummy_email"
                    style="@style/profile_all_textview_content"/>

            </LinearLayout>

            <View
                android:layout_marginBottom="@dimen/dimen_big_super_24dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_line"
                android:background="@color/colorBackground"/>

            <LinearLayout
                style="@style/profile_all_container_textview">

                <TextView
                    android:text="@string/text_profil_detail_notelp"
                    style="@style/profile_all_textview_subtitle"/>

                <TextView
                    android:id="@+id/act_koor_dosen_kontak"
                    android:text="@string/dummy_no_telp"
                    style="@style/profile_all_textview_content"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_line"
                android:background="@color/colorBackground"/>



        </LinearLayout>

        <include layout="@layout/content_all_copyright_institute"/>

    </RelativeLayout>

</ScrollView>