<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/container_notif"
    android:background="@color/colorBackground"
    android:paddingStart="@dimen/dimen_big"
    android:paddingBottom="@dimen/dimen_medium"
    android:paddingTop="@dimen/dimen_medium"
    android:paddingEnd="@dimen/dimen_big">

    <TextView
        android:id="@+id/ctn_pemberitahuan_pengirim"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold"
        tools:text="@string/dummy"/>

    <TextView
        android:id="@+id/ctn_pemberitahuan_isi"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dimen_small"
        android:layout_height="wrap_content"
        android:maxLines="2"
        tools:text="@string/dummyLong"/>

    <TextView
        android:id="@+id/ctn_pemberitahuan_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/dummy_tanggal"
        android:textSize="@dimen/text_size_default"
        android:textColor="@color/colorTextBlack"/>


</LinearLayout>